# taskctl

./: LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/app/: App.css  App.jsx
frontend/src/components/: Sidebar.css  Sidebar.jsx  TaskCard.css  TaskCard.jsx  TaskDetail.css  TaskDetail.jsx  TaskList.css  TaskList.jsx
frontend/src/components/auth/: AuthGate.jsx  Login.css  Login.jsx  Signup.jsx
frontend/src/lib/: auth.js
frontend/src/styles/: index.css  theme.css
taskctl/: auth_store.py  commands.py  database.py  main.py  models.py  server.py  storage.py
taskctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_comment_describe.py  test_create.py  test_helpers.py  test_list.py  test_start_done_delete.py
