[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskctl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml", "fastapi", "uvicorn[standard]", "PyJWT"]

[project.scripts]
taskctl = "taskctl.main:main"

[tool.setuptools.packages.find]
where = ["."]
